force-app/main/default/objects/Problem_Stakeholder__c/Problem_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Problem Stakeholder</label>
    <nameField>
        <displayFormat>PSH-{00000000}</displayFormat>
        <label>Problem Stakeholder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problem Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>