force-app/main/default/objects/Problem_Stakeholder__c/fields/External_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>External_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Stakeholder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Problem Stakeholders</relationshipLabel>
    <relationshipName>Problem_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>