force-app/main/default/objects/Problem_Stakeholder__c/fields/Internal_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Internal_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Stakeholder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Problem_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>