force-app/main/default/objects/Problem_Stakeholder__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Business Idea</label>
    <referenceTo>Problem</referenceTo>
    <relationshipLabel>Problem Stakeholders</relationshipLabel>
    <relationshipName>Problem_Stakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>